resources/scss/app.scss
$primary: #C2185B;
$secondary: #EC407A;
$min-contrast-ratio: 0.5;

@import "~bootstrap/scss/bootstrap";
@import "~fontawesome/css/all.css";

.form-floating:focus-within {
    z-index: 2;
}

.form-group .form-floating input{
    border-radius: 0;
}

.form-group:first-child .form-floating input {
    margin-bottom: -1px;
    border-top-right-radius: var(--bs-border-radius);
    border-top-left-radius: var(--bs-border-radius);
}

.form-group:last-child .form-floating input {
    margin-bottom: 10px;
    border-bottom-left-radius: var(--bs-border-radius);
    border-bottom-right-radius: var(--bs-border-radius);
}

.superscript {
    vertical-align: super;
    font-size: .6em;
}

.w-fit {
    width: fit-content !important;
}

#collapseMenu {
    width: 4em;
}

